# SpeechToTextAgent

./: .dockerignore  .env.enhanced  .env.example  .env.ssl2  .gitignore  Dockerfile  MASTER_Documentation.md  PROFESSIONAL_AUDIO_SETUP.md  PROJECT_SUCCESS.md  README.md  docker-compose.lean.yml  docker-compose.simple.yml  docker-compose.yml  knowledge.db  pyproject.toml  requirements.txt  start.sh  test_system.py
.github/: copilot-instructions.md
cpp/: bigint.hpp  main.cpp  notes.md  prog  vect2.cpp  vect2.hpp
docs/: PROJECT_TRACKING.md  RESEARCH_REPORT.md
knowledge-service/: Dockerfile  Dockerfile.kb  app.py  requirements-kb.txt  requirements.txt
stt-core/: Dockerfile.core  app.py  requirements-core.txt
stt-core/static/: app.js  index.html  testing.html
stt_ai_agent/: __init__.py  api.py  api_simple.py  cli.py  config.py
stt_ai_agent/audio/: __init__.py  recorder.py
stt_ai_agent/knowledge/: __init__.py  knowledge_base.py
stt_ai_agent/processing/: __init__.py  ollama_processor.py
stt_ai_agent/transcription/: __init__.py  whisper_stt.py
web/: app.js  index.html  testing.html
